-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 25
-
Component/s: hotspot
-
b22
[2025-05-06T11:34:44,742Z] /workspace/open/src/hotspot/share/jvmci/jvmciCompilerToVMInit.cpp:239:35: error: no member named 'ShenandoahBarrierSet' in 'BarrierSet'
[2025-05-06T11:34:44,742Z] } else if (bs->is_a(BarrierSet::ShenandoahBarrierSet)) {
[2025-05-06T11:34:44,742Z] ~~~~~~~~~~~~^
[2025-05-06T11:34:45,729Z] 1 error generated.
- caused by
-
JDK-8356075 Support Shenandoah GC in JVMCI
-
- Resolved
-
- duplicates
-
JDK-8356265 no member named 'ShenandoahBarrierSet' in 'BarrierSet'
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/bfdafb76
-
Review(master)
openjdk/jdk/25064