8356266: Fix non-Shenandoah build after JDK-8356075